user profile with change password module is created

--- a/resources/scss/_custom.scss
+++ b/resources/scss/_custom.scss
@@ -11,3 +11,8 @@
 .sidebar-menu.nav-child-indent ul.nav.nav-treeview {
     padding-left: 0.5rem;
 }
+
+label.required::after {
+    content: " *";
+    color: red;
+}
