Add password visibility toggle and enhance .env.example configuration

--- a/resources/scss/_admin-lte.scss
+++ b/resources/scss/_admin-lte.scss
@@ -2,6 +2,8 @@
 // ---------------------------------------------------
 @import "bootstrap/scss/functions";
 
+@import "variables";
+
 // AdminLTE Configuration
 // ---------------------------------------------------
 // @import "bootstrap-variables"; // little modified are here
