--- a/resources/scss/_custom.scss
+++ b/resources/scss/_custom.scss
@@ -16,3 +16,8 @@ label.required::after {
     content: " *";
     color: red;
 }
+
+.bi::before,
+[class*=" bi-"]::before {
+    vertical-align: middle;
+}
